# keepiq3

./: .env.example  .gitignore  DEPLOY.md  README.md  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_keepiq_mvp.py  0002_conversation_sessions.py
backend/app/: __init__.py  main.py
backend/app/ai/: client.py  fallback.py  prompts.py  schemas.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  auth.py  calendar.py  health.py  inbox.py  lists.py  search.py  tasks.py  today.py
backend/app/bot/: extractor.py  handlers.py  keyboards.py  run_polling.py  runtime.py
backend/app/copy/: templates.py
backend/app/core/: clock.py  config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  bot_action.py  conversation_session.py  inbox_item.py  task.py  task_list.py  user.py
backend/app/schemas/: auth.py  common.py  inbox.py  search.py  task.py  task_list.py
backend/app/search/: service.py
backend/app/services/: action_templates.py  actions.py  ai_pipeline.py  conversations.py  date_parsing.py  inbox.py  media_extraction.py  summaries.py  task_lists.py  tasks.py  understanding_normalizer.py  users.py
backend/app/workers/: run.py  scheduler.py
backend/scripts/: set_webhook.py
docs/: CODEBASE_GUIDE.md  DEPLOY.md  ENV_TEMPLATES.md  RUN_LOCAL.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: diag.html
frontend/src/: App.tsx  ErrorBoundary.tsx  (+1 more)
(+29 files in other folders)
